# Hacker-News-ETL-Pipeline

./: .gitignore  README.md  pyproject.toml
etc/: aws.cfg.example  clusterinfo.json.example  twitter.cfg.example
model/: pyproject.toml
model/app/: classifier.py  main.py
model/app/api/: classify.py
src/: __init__.py  run.py
src/app/: __init__.py
src/app/dashboard/: __init__.py  callback.py
src/app/dashboard/component/: footer.py  header.py
src/app/dashboard/page/: index.py
src/app/service/: __init__.py  ksql_service.py  mongo_service.py
src/dashboard/: app.py
src/driver/: consumer.py  producer.py
src/model/app/: classifier.py
src/model/app/api/: classify.py
src/producer/: pyproject.toml
