[tool.poetry]
name = "us-election-sentiment-stream"
version = "0.1.0"
description = ""
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.11.0"
dash = "^1.16.3"
dash-core-components = "^1.12.1"
dash-html-components = "^1.1.1"
pymongo = "^3.11.0"
pandas = "^1.1.3"
kafka-python = "^2.0.2"
pykafka = "^2.8.0"
textblob = "^0.15.3"
tweepy = "^3.9.0"
Flask = "^1.1.2"
dash-bootstrap-components = "^0.10.7"
ksql = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
