[tool.poetry]
name = "model"
version = "0.1.0"
description = "Sentiment analyzer"
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.6"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
pandas = "^1.1.3"
nltk = "^3.5"
vaderSentiment = "^3.3.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.8"
black = "^20.8b1"
isort = "^5.6.3"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
